# watchlist

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_watchlist.py  wsgi.py
static/: style.css
templates/: 404.html  base.html  edit.html  index.html
tests/: conftest.py  test_watchlist.py
watchlist/: __init__.py  commands.py  errors.py  extensions.py  models.py  settings.py
watchlist/blueprints/: auth.py  main.py
watchlist/templates/: base.html  edit.html  index.html  login.html  settings.html
watchlist/templates/errors/: 400.html  404.html  500.html
